--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite1</th></tr>
-<tr><td><a href="#t0">Test1</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">14,801</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">47</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">parrelTestingExample.testNGParallelTestingDemo</td><td><a href="#m0">test1</a></td><td rowspan="1">1537908331998</td><td rowspan="1">14730</td></tr><tr class="passedeven"><td><a href="#m1">test2</a></td><td rowspan="1">1537908331998</td><td rowspan="1">13384</td></tr><tr class="passedeven"><td><a href="#m2">test3</a></td><td rowspan="1">1537908345386</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testNgParameters.testNgParametersDemo</td><td><a href="#m0">test1</a></td><td rowspan="1">1538039302708</td><td rowspan="1">10</td></tr></tbody>
 </table>
-<h2>Test1</h2><h3 id="m0">parrelTestingExample.testNGParallelTestingDemo#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">parrelTestingExample.testNGParallelTestingDemo#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">parrelTestingExample.testNGParallelTestingDemo#test3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test1</h2><h3 id="m0">testNgParameters.testNgParametersDemo#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Automation</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
