--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,30 +4,23 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNgGrouping.testNgGroupingDemo</td>
+<td>parrelTestingExample.testNGParallelTestingDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test4</td>
+<td>test2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>test3</td>
-<td>regression </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>test1</td>
-<td>sanity </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
