--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,5 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>testNgGroupingDemo.test3()[pri:0, instance:testNgGrouping.testNgGroupingDemo@67c67e]<br/></td></tr>
-<tr><td>sanity</td><td>testNgGroupingDemo.test2()[pri:0, instance:testNgGrouping.testNgGroupingDemo@67c67e]<br/>testNgGroupingDemo.test1()[pri:0, instance:testNgGrouping.testNgGroupingDemo@67c67e]<br/></td></tr>
-<tr><td>smoke</td><td>testNgGroupingDemo.test2()[pri:0, instance:testNgGrouping.testNgGroupingDemo@67c67e]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
