--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testNgIgnore.testNgIgnoreDemo.test1</td></tr>
+<tr><td>testNgIgnore.testNgIgnoreDemo.test2</td></tr>
 </table>
